# ai-agents-master-class

./: .gitignore  AGENTS.md  CLAUDE.md  readme.md
00-environment/: main.ipynb  pyproject.toml
01-your-first-ai-agent/: main.ipynb  memory.ipynb  movie-agent.ipynb  pyproject.toml
assignments/knitting-tutor-agent/: .env.example  DISCORD_POST.md  README.md  common.py  conversation_router.py  knitcoach.py  knitting_tutor_agent.ipynb  main.py  model_provider.py  nav.py  pyproject.toml  ui.py
assignments/knitting-tutor-agent/.ipynb_checkpoints/: knitting_tutor_agent-checkpoint.ipynb
assignments/knitting-tutor-agent/.streamlit/: config.toml  secrets.toml.example
assignments/knitting-tutor-agent/assets/techniques/: README.md
assignments/knitting-tutor-agent/content/: __init__.py  pattern_charts.py  presets.py  purchases.py  symbols.py  techniques.py  tools.py
assignments/knitting-tutor-agent/domain/: __init__.py  curricula.py  journeys.py  models.py  project_patterns.py
assignments/knitting-tutor-agent/evals/: MANUAL_SCENARIOS.md  cases.jsonl  rubric.md  run_codex.py  run_codex_images.py  run_offline.py
assignments/knitting-tutor-agent/scripts/: additional_reference_times.json  build_chain_reference_cards.py  build_reference_cards.py  reference_card_manifest.json
assignments/knitting-tutor-agent/tests/: test_beginner_curricula.py  test_model_provider.py  test_technique_lessons.py  test_tool_library.py  test_user_journeys.py
assignments/knitting-tutor-agent/views/: __init__.py  home.py  pattern_studio.py  project_workbench.py  techniques.py  tools.py  tutor.py
(+43 files in other folders)
