[project]
name = "knitting-tutor-agent"
version = "0.1.0"
description = "LangGraph education agent for beginner crochet and needle knitting learners"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.5",
    "nbconvert>=7.16.6",
]
